[gd_scene load_steps=2 format=3 uid="uid://va5pjd6vuuo2"]

[ext_resource type="Script" uid="uid://bp8oxr810tyxf" path="res://Scripts/Componentes/HurtBox.gd" id="1_2g1rk"]

[node name="HurtBox" type="Area2D"]
editor_description = "Adiciona colis√£o a um componente. Requer componente de vida"
collision_layer = 4
collision_mask = 4
script = ExtResource("1_2g1rk")

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
max_polyphony = 100

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
