[gd_scene load_steps=10 format=3 uid="uid://bu62qgilsxetf"]

[ext_resource type="Script" uid="uid://bxwx72gohremh" path="res://Scripts/InimigoTeste.gd" id="1_ntg74"]
[ext_resource type="Texture2D" uid="uid://c3tl3oddronfh" path="res://icon.svg" id="1_u1ubb"]
[ext_resource type="Script" uid="uid://hsdutxxttrp3" path="res://Scripts/Componentes/Vida.gd" id="2_34dr1"]
[ext_resource type="Script" uid="uid://bp8oxr810tyxf" path="res://Scripts/Componentes/HurtBox.gd" id="3_ntg74"]
[ext_resource type="PackedScene" uid="uid://pc4mgv2nv8af" path="res://Objetos/CompHitBox.tscn" id="4_0687k"]
[ext_resource type="AudioStream" uid="uid://dhgsnus0fna7q" path="res://Audio/SOM TESTE.mp3" id="5_0687k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ntg74"]
size = Vector2(128, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mgrx"]
size = Vector2(118, 102)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gx8x6"]
size = Vector2(128, 127)

[node name="InimigoTeste" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ntg74")
velocidade = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -60)
shape = SubResource("RectangleShape2D_ntg74")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.965667, 0, 0.340985, 1)
position = Vector2(0, -64)
texture = ExtResource("1_u1ubb")

[node name="Vida" type="Node" parent="."]
script = ExtResource("2_34dr1")
vida_max = 500
metadata/_custom_type_script = "uid://hsdutxxttrp3"

[node name="HitBox" parent="." instance=ExtResource("4_0687k")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -52)
shape = SubResource("RectangleShape2D_8mgrx")
debug_color = Color(0.807155, 0.414602, 3.85046e-07, 0.42)

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("comp_vida")]
collision_layer = 4
collision_mask = 4
script = ExtResource("3_ntg74")
comp_vida = NodePath("../Vida")
hit_sfx = ExtResource("5_0687k")
metadata/_custom_type_script = "uid://bp8oxr810tyxf"

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -64.5)
shape = SubResource("RectangleShape2D_gx8x6")
debug_color = Color(0.99999, 0, 0.0935918, 0.42)

[node name="RayDireita" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(70, -60)
target_position = Vector2(20, 0)

[node name="RayVazioDireita" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(70, -24)

[node name="RayEsquerda" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-70, -60)
target_position = Vector2(-20, 0)

[node name="RayVazioEsquerda" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-70, -24)
